--- a/css/style.css
+++ b/css/style.css
@@ -3,22 +3,98 @@
   padding: 0;
 }
 body{
-  background: black;
   font-family:'Times New Roman', Times, serif;
 }
-.container{
-  width: 20rem;
-  margin: 5rem auto;
+a{
+  text-decoration: none;
+}
+ul{
+  list-style: none;
+}
+/*----------------Header----------------*/
+header{
+  background: url('../img/img8.jpg');
+  background-size: cover;
+  background-position: center;
+}
+.sombra{
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0,.5);
+}
+.header-container{
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 30px;
+}
+.header-container img{
+  background: #FEC63E;
+  border-radius: 50%;
+  height: 70px;
+  width: 80px;
+}
+.header-nav ul{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.header-nav a{
+  display: block;
+  padding: 10px 20px;
+  border: 3px solid #FEC63E;
+  color: #FEC63E;
+  border-radius: 10px;
+  text-transform: uppercase;
+  z-index: 5;
+  font-weight: bold;
+  transition: 1s;
+}
+.header-nav a:hover{
+  transition: 1s;
   background-color: #FEC63E;
+  color: #000;
+}
+.header-introducao{
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 12rem 0rem;
+  color: #fff;
+  text-align: center;
+}
+.header-introducao h1{
+  font-size: 4rem;
+  line-height: 1;
+  margin-top: -100px;
+  padding: 0px 30px;
+}
+.header-introducao p{
+  text-align: center;
+  max-width: 50rem;
+  margin: 0 auto;
+  padding: 15px 30px;
+  font-size: 1.5rem;
+}
+/*----------------Main----------------*/
+main{
+  padding: 2rem 0rem;
+}
+.container-main{
+  width: 20rem;
+  margin: 0 auto;
+  background: #FEC63E;
   border-radius: 1rem;
   padding-bottom: 1rem;
 }
-.container h1{
+.container-main h2{
   padding: 1rem;
+  font-size: 1.8rem;
   text-align: center;
   position: relative;
 }
-.container h1::after{
+.container-main h2::after{
   content: "";
   position: absolute;
   background-color: black;
@@ -38,7 +114,7 @@ body{
   font-weight: bold;
   margin-top: .25rem;
 }
-#form input{
+#form input,select{
   border-color: transparent;
   border-radius: 0.25rem;
   height: 2rem;
@@ -54,6 +130,9 @@ body{
   font-weight: bold;
   border-radius: 0.25rem;
 }
+#form button:hover{ 
+  box-shadow: 0 0 1em #fff;
+}
 #resultado{
   margin: 1rem 2.5rem;
   box-shadow: 0 0 .5em black;
@@ -66,3 +145,5 @@ body{
   font-weight: bold;
   font-size: 1.5rem;
 }
+/*----------------Section----------------*/
+/*----------------Section----------------*/
