--- a/css/style.css
+++ b/css/style.css
@@ -139,9 +139,10 @@ header{
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  padding: 6rem 30px;
 }
 .main-grid h2{
-  padding: 1rem;
+  margin-bottom: 2.5rem;
   font-size: 1.8rem;
   text-align: center;
   position: relative;
@@ -155,7 +156,7 @@ header{
   padding-bottom: 1rem;
 }
 #form{
-  margin: 1rem 2.5rem;
+  margin: 1rem 0rem;
   display: grid;
   grid-template-columns: 1fr 2fr;
   gap: 1rem;
@@ -179,7 +180,7 @@ header{
   grid-column: 1/-1;
   background: black;
   color: #FEC63E;
-  padding: 0.25rem;
+  padding: 0.5rem;
   cursor: pointer;
   font-size: 1rem;
   font-weight: bold;
@@ -200,9 +201,20 @@ header{
   font-weight: bold;
   font-size: 1.5rem;
 }
+#resultado .grid-resultado{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 /*----------------Section----------------*/
 /*----------------Section----------------*/
 /*----------------Responsividade----------------*/
+@media (max-width: 850px){
+  #resultado .grid-resultado{
+    flex-direction: column;
+  }
+}
+
 @media (max-width: 750px){
   .header-container{
     flex-direction: column;
@@ -228,6 +240,7 @@ header{
     grid-template-columns: 1fr;
   }
 }
+
 @media (max-width: 550px){
   .header-container{
     flex-direction:row;
@@ -239,8 +252,18 @@ header{
   display: none;
 }
 }
+
 @media (max-width: 400px){
   .header-introducao h1{
     font-size: 2.5rem;
   }
+}
+
+@media (max-width: 320px){
+.descricao-detalhe p{
+    font-size: 1.2rem;
+  }  
+.main-grid{
+  padding: 6rem 10px;
+}
 }
