--- a/css/style.css
+++ b/css/style.css
@@ -312,13 +312,77 @@ header{
 @media (max-width: 550px){
   .header-container{
     flex-direction:row;
+    background: #FEC63E;
+    padding: .2rem 30px;
+  }
+  .header-introducao h1{
+    margin-top: .3rem;
   }
  #btn-mobile{
+  display: flex;
+  position: relative;
+  padding: .5rem 1rem;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+#hamburger{
+  width: 20px;
+  border-top: 4px solid;
   display: block;
 }
-.header-nav{
-  display: none;
+#hamburger::after, #hamburger::before{
+  content: '';
+  width: 20px;
+  display: block;
+  border-top: 2px solid;
+  height: 2px;
+  background: currentColor;
+  margin-top: 5px;
+  transition: .3s;
+  position: relative;
 }
+#nav.active #hamburger{
+  border-top: transparent;
+}
+#nav.active #hamburger::before{
+  transform: rotate(135deg);
+}
+#nav.active #hamburger::after{
+  transform: rotate(-135deg);
+  position: absolute;
+  top: 7px;
+}
+#menu{
+  display: block;
+  position: absolute;
+  width: 100%;
+  top: 70px;
+  right: 0px;
+  z-index: -1;
+  background: #FEC63E;
+  padding-bottom: 1rem;
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  max-height: 0;
+  overflow: hidden;
+  transition: 0.6s;
+}
+#nav.active #menu{
+  z-index: 10;
+  max-height: 15rem;
+}
+#menu a{
+  background: #000;
+  border-radius: 1rem;
+  transition: .5s;
+}
+#menu a:hover{
+  transition: .5s;
+  background: rgb(34, 34, 34);
+  color: #fff;
+}
+
 }
 
 @media (max-width: 400px){
