--- a/css/style.css
+++ b/css/style.css
@@ -277,11 +277,65 @@ header{
   border-top: 1px solid;
   border-image: linear-gradient(to right, transparent, orange, transparent) 1;
 }
-/*----------------footer----------------*/
-.footer{
-  background: #FEC63E;
-  height: 20rem;
+/*----------------Section Contato----------------*/
+#contato{
+  background: #202124;
+  min-height: 15rem;
+  padding: 6rem 30px 0rem 30px;
 }
+.container-contato{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap: 1rem;
+}
+.container-contato h3{
+  text-align: center;
+  margin-bottom: 1rem;
+}
+.redes-sociais{
+  color: #fff;
+  margin: 1rem auto;
+  max-width: 15rem;
+  text-align: center;
+}
+.redes-sociais img{
+  border: 2px solid #fff;
+  border-radius: 50%;
+  box-shadow: 0 2px 15px 0 rgba(238, 235, 235, 0.25);
+  margin: 1rem;
+}
+.container-form-navegacao{
+  max-width: 12rem;
+  margin: 1rem auto;
+  color: #fff;
+}
+.navegacao #menu{
+  color: #fff !important;
+  position: relative;
+  z-index: 0;
+  overflow: visible;
+  background: transparent;
+  top: 0px;
+}
+
+.navegacao #menu li{
+  margin-bottom: 1rem;
+}
+
+.navegacao #menu a{
+  padding: 0rem 2rem;
+  color: #fff;
+  background: transparent;
+  text-decoration: underline;
+}
+
+.container-form-contato{
+  width: 12rem;
+  color: #fff;
+  margin: 1rem auto;
+  text-align: center;
+}
+
 /*----------------Responsividade----------------*/
 @media (max-width: 850px){
   #resultado .grid-resultado{
@@ -317,6 +371,15 @@ header{
   .main-grid{
     grid-template-columns: 1fr;
   }
+  
+.container-contato{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  gap: 1rem;
+}
+.grid-redes-sociais{
+  grid-column: 1/1;
+}
 }
 
 @media (max-width: 550px){
@@ -400,6 +463,10 @@ header{
 #form button{
   width: 100%;
 }
+.redes-sociais img{
+  margin: .5rem;
+  width: 3rem;
+}
 }
 
 @media (max-width: 400px){
@@ -408,6 +475,12 @@ header{
   }
   .display-flex-indicadores{
   margin: 0rem .5rem;
+  }
+  .container-contato{
+    grid-template-columns: 1fr;
+  }
+  .redes-sociais{
+    margin-top: 8rem;
   }
 }
 
