--- a/css/style.css
+++ b/css/style.css
@@ -363,13 +363,19 @@ h2::before{
   max-width: 12rem;
   text-align: center;
 }
-.redes-sociais img{
-  border: 0.125rem solid #FEC63E;
-  border-radius: 5rem;
-  box-shadow: 0 0.125rem 0.938rem 0 rgba(238, 235, 235, 0.25);
-  margin: .2rem;
+/*------------------------------*/
+.svg{
+  margin: 0rem 3px;
+  border: 2px solid #fcd16c;
+  border-radius: 50%;
+  height: 3rem;
   width: 3rem;
+  box-shadow: 0 0.125rem 0.938rem 0 rgba(238, 235, 235, 0.25);
 }
+svg:hover path {
+  fill: #fce57e;
+}
+/*------------------------------*/
 .container-form-navegacao{
   max-width: 12rem;
   margin: 1rem auto;
@@ -571,10 +577,6 @@ footer a{
   }
   #form button{
     width: 100%;
-  }
-  .redes-sociais img{
-    margin: .5rem;
-    width: 3rem;
   }
 }
 @media (max-width: 25rem){
