--- a/css/style.css
+++ b/css/style.css
@@ -590,6 +590,9 @@ footer a{
   #form button{
     width: 100%;
   }
+  .main-descricao p{
+    font-size: 1.2rem;
+  }
 }
 @media (max-width: 25rem){
   .header-introducao h1{
