--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,16 @@
 body{
   font-family:'Times New Roman', Times, serif;
 }
+::-webkit-scrollbar-track{
+  background-color: #000;
+}
+::-webkit-scrollbar{
+  width: .4rem;
+}
+::-webkit-scrollbar-thumb{
+  background: linear-gradient(to right, #fce57e, #FEC63E);
+  border-radius: 1rem;
+}
 a{
   text-decoration: none;
 }
