--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,14 @@ body{
   font-family:'Times New Roman', Times, serif;
 }
 ::-webkit-scrollbar-track{
-  background-color: #000 !important;
+  background-color: #000;
 }
 ::-webkit-scrollbar{
-  width: .4rem !important;
+  width: .4rem;
 }
 ::-webkit-scrollbar-thumb{
-  background: linear-gradient(to right, #fce57e, #FEC63E) !important;
-  border-radius: 1rem !important;
+  background: linear-gradient(to right, #fce57e, #FEC63E);
+  border-radius: 1rem;
 }
 a{
   text-decoration: none;
